--- a/style.css
+++ b/style.css
@@ -1,82 +1,89 @@
-*{
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+* {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.grid{
-    display: grid;
-    width: auto;
-    height: auto;
-    grid-gap: 20px  
+.grid {
+  display: -ms-grid;
+  display: grid;
+  width: auto;
+  height: auto;
+  grid-gap: 20px;
 }
 
-.header{
-    text-align: center;
+.header {
+  text-align: center;
 }
 
-hr{
-   height: 2px;
-   border-width:0;
-   background-color:black;
-   box-shadow: 2px 2px rgb(75, 74, 74);
-   margin-left: 300px;
-   margin-right: 300px;
+hr {
+  height: 2px;
+  border-width: 0;
+  background-color: black;
+  -webkit-box-shadow: 2px 2px #4b4a4a;
+          box-shadow: 2px 2px #4b4a4a;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
-nav ul{
-    text-align: center;
+nav ul {
+  text-align: center;
 }
+
 nav ul a {
-    text-decoration:none;
-}
-nav ul a li{
-    list-style-type: none;
-    display: inline;
-    background-color: black;
-    color: white;
-    box-shadow: 2px 2px rgb(75, 74, 74);
-    padding: 15px 40px;
-    margin: 10px;
-    width: 100%
+  text-decoration: none;
 }
 
-.container{
-    margin-left: 300px;
-    margin-right: 300px;
+nav ul a li {
+  list-style-type: none;
+  display: inline;
+  background-color: black;
+  color: white;
+  -webkit-box-shadow: 2px 2px #4b4a4a;
+          box-shadow: 2px 2px #4b4a4a;
+  padding: 15px 40px;
+  margin: 10px;
+  width: 100%;
+}
+
+.container {
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .img-basic {
-    display: block;
-    width: 100%;
+  display: block;
+  width: 100%;
 }
 
-.footer{
-    background-color: black;
-    box-shadow: 2px 2px rgb(75, 74, 74);
-    text-align: center;
-    padding: 15px 40px;
-    color: white;
-    margin-left: 300px;
-    margin-right: 300px;
+.footer {
+  background-color: black;
+  -webkit-box-shadow: 2px 2px #4b4a4a;
+          box-shadow: 2px 2px #4b4a4a;
+  text-align: center;
+  padding: 15px 40px;
+  color: white;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 @media only screen and (max-width: 768px) {
-.container {
+  .container {
     margin-left: 30px;
     margin-right: 30px;
-}
-.footer{
+  }
+  .footer {
     margin-left: 30px;
     margin-right: 30px;
-}
+  }
 }
 
 @media only screen and (max-width: 767px) {
-    nav ul a li{
-        padding: 5px 20px;
-        margin: 1px;
-    }
-    hr{ 
-        margin-left: 30px;
-        margin-right: 30px;
-     }
+  nav ul a li {
+    padding: 5px 20px;
+    margin: 1px;
+  }
+  hr {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
 }
+/*# sourceMappingURL=style.css.map */
